// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toast > renders the toast component with icon 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="bg-success inline-flex h-8 items-center gap-3 rounded-sm pl-5 text-black text-body-sm pr-7"
  role="alert"
>
  <span
    aria-label="Mood"
    class="material-symbols-outlined size-24 select-none"
    role="img"
  >
    mood
  </span>
  This is a toast message
</div>
`;

exports[`Toast > renders the toast component with text 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="bg-success inline-flex h-8 items-center gap-3 rounded-sm pl-5 text-black text-body-sm pr-5"
  role="alert"
>
  This is a toast message
</div>
`;
